// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAppComponent should correctly transform allImports.tsx: allImports.tsx 1`] = `
"import type { ReactNode } from "react";
import type { AppProps } from "next/app";
import { CroctProvider } from "@croct/plug-next/CroctProvider";

export default function App(
  {
    Component: Component,
    pageProps: pageProps
  }: AppProps
): ReactNode {
  return (
    <CroctProvider>
      <Component {...pageProps}></Component>
    </CroctProvider>
  );
}
"
`;

exports[`CreateAppComponent should correctly transform empty.jsx: empty.jsx 1`] = `
"import { CroctProvider } from "@croct/plug-next/CroctProvider";

export default function App(
  {
    Component: Component,
    pageProps: pageProps
  }
) {
  return (
    <CroctProvider>
      <Component {...pageProps}></Component>
    </CroctProvider>
  );
}"
`;

exports[`CreateAppComponent should correctly transform empty.tsx: empty.tsx 1`] = `
"import type { ReactNode } from "react";
import type { AppProps } from "next/app";
import { CroctProvider } from "@croct/plug-next/CroctProvider";

export default function App(
  {
    Component: Component,
    pageProps: pageProps
  }: AppProps
): ReactNode {
  return (
    <CroctProvider>
      <Component {...pageProps}></Component>
    </CroctProvider>
  );
}"
`;

exports[`CreateAppComponent should correctly transform providerImport.jsx: providerImport.jsx 1`] = `
"import { CroctProvider } from "@croct/plug-next/CroctProvider";

export default function App(
  {
    Component: Component,
    pageProps: pageProps
  }
) {
  return (
    <CroctProvider>
      <Component {...pageProps}></Component>
    </CroctProvider>
  );
}
"
`;

exports[`CreateAppComponent should correctly transform unrelatedCode.tsx: unrelatedCode.tsx 1`] = `
"import type { ReactNode } from "react";
import type { AppProps } from "next/app";
import { CroctProvider } from "@croct/plug-next/CroctProvider";
import {Fragment} from "react";

export function UnrelatedComponent() {
    return <Fragment />;
}

export default function App(
    {
        Component: Component,
        pageProps: pageProps
    }: AppProps
): ReactNode {
    return (
        <CroctProvider>
            <Component {...pageProps}></Component>
        </CroctProvider>
    );
}
"
`;
